add local variable get optimization

--- a/vm/index.html
+++ b/vm/index.html
@@ -24,6 +24,8 @@
         <div class="code">
             {code_html}
         </div>
+        <div id="asm_code">
+        </div>
     </div>
 </body>
 </html>
