Add on_break callback to VM

--- a/examples/euler/template.html
+++ b/examples/euler/template.html
@@ -24,7 +24,9 @@
         }}
         functions['display'] = {{
             arg_count: 2,
-            func: function(pointer, size){{}}
+            func: function(pointer, size){{
+                
+            }}
         }}
 
         // initialize debugger interface
