--- a/examples/euler/template.html
+++ b/examples/euler/template.html
@@ -4,12 +4,21 @@
     <meta charset="UTF-8">
     <title>html page</title>
 
-    <link type="text/css" rel="stylesheet" href="vm/page.css">
+    <link type="text/css" rel="stylesheet" href="vm/code.css">
+    <link type="text/css" rel="stylesheet" href="page.css">
+
+    <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
     <script src="vm/vm.js"></script>
     <script>{code_js}</script>
-    <script src="vm/interface.js">
-    </script>
+    <script src="vm/interface.js"></script>
+
     <script>
+        var graph = null;
+        var graph_data = {{
+            x: null,
+            y: null
+        }}
+        var vm = null;
         // create virtual machine instance
         var functions = []
         functions['sqrt'] = {{
@@ -25,18 +34,45 @@
         functions['display'] = {{
             arg_count: 2,
             func: function(pointer, size){{
-                
+                var y = vm.get_array(pointer, size);
+                graph_data.y = y;
+                // you dont want to actually redraw graph each iteration
+                // since its perfomance heavy action
+                // instead you use VM on_break hook to redraw only then
+                // VM pauses execution due to breakpoint or exit execution
+                // due to reaching end of program
             }}
         }}
 
         // initialize debugger interface
-        initialize_vm_interface(functions);
+
+        window.onload = function(){{
+            vm = initialize_vm_interface(functions);
+            graph = document.getElementById('graph');
+            Plotly.plot(graph, [graph_data], {{margin: {{t: 0}} }});
+
+            vm.on_break = function(){{
+                if(graph_data.y === null){{
+                    return;
+                }}
+                // update grapth
+                var x = [];
+                var STEP = 0.01;
+                for(var i=0; i<graph_data.y.length; ++i){{
+                    x.push(i*STEP);
+                }}
+                graph_data.x = x;
+                Plotly.redraw(graph);
+            }}
+        }}
     </script>
 </head>
+
 <body>
     <div class="popups">
         <div id="hover_image"></div>
     </div>
+
     <div class="interface">
         <div id="controls">
             <div id="flow-control">
@@ -47,7 +83,7 @@
         <div class="code">
             {code_html}
         </div>
-        <div id="asm_code">
+        <div id="graph">
         </div>
     </div>
 </body>
