--- a/vm/index.html
+++ b/vm/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>html page</title>
 
-    <link type="text/css" rel="stylesheet" href="vm/page.css">
+    <link type="text/css" rel="stylesheet" href="vm/code.css">
     <script src="vm/vm.js"></script>
     <script>{code_js}</script>
     <script src="vm/interface.js">
