--- a/examples/euler/template2.html
+++ b/examples/euler/template2.html
@@ -23,7 +23,7 @@
                 return Math.sqrt(x)
             }
         }
-        functions['alloc_float'] = {
+        functions['allocate_float'] = {
             arg_count: 1,
             func: "vm.alloc"
         }
